--- a/stayle.css
+++ b/stayle.css
@@ -67,31 +67,62 @@ nav li a {
 .banner_describtion {
     color: #131313;
 }
-.banner img{
+
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
+/* main stayel */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
-
+.teams_container {
+    margin-top: 80px;
+    display: flex;
+    align-items: center;
+}
+.teams_img_container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams_content{
+  padding: 0 70px;
+}
+.teams_title{
+    font-size: 3rem;
+}
+.teams_title .quick_list{
+    color: #727272;
+    font-weight: 500;
+}
+.teams_title .text_feture{
+    color: #FF900E;
+    font-weight: 700;
+}
 
 /* responsive for small device Mobile */
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 5px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
-    
+
 }
 
 /* Tablet or medium device */
 @media screen and (min-width: 577px) and (max-width: 992px) {
-    header{
+    header {
         padding: 30px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
 }
