--- a/stayle.css
+++ b/stayle.css
@@ -11,7 +11,9 @@
     cursor: pointer;
     border: 0;
 }
-
+.text_gary {
+    color: #727272;
+}
 * {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
@@ -64,10 +66,6 @@ nav li a {
     font-weight: 700;
 }
 
-.banner_describtion {
-    color: #131313;
-}
-
 .banner img {
     margin-top: 20px;
     width: 100%;
@@ -76,11 +74,10 @@ nav li a {
 /* main stayel */
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 .teams_container {
-    margin-top: 80px;
     display: flex;
     align-items: center;
 }
@@ -96,7 +93,6 @@ main {
     font-size: 3rem;
 }
 .teams_title .quick_list{
-    color: #727272;
     font-weight: 500;
 }
 .teams_title .text_feture{
@@ -104,15 +100,31 @@ main {
     font-weight: 700;
 }
 
+
+
+
+
+
+
 /* responsive for small device Mobile */
 @media screen and (max-width: 576px) {
     header {
         padding: 5px;
     }
 
-    nav {
+    nav{
         flex-direction: column;
     }
+    .teams_container{
+        flex-direction: column-reverse;
+    }
+    .teams_img_container{
+        margin-top: 30px;
+        grid-template-columns: 1fr;
+    }
+    .teams_content{
+        padding: 0 20px;
+      }
 
 }
 
@@ -122,7 +134,7 @@ main {
         padding: 30px;
     }
 
-    nav {
+    nav, .teams_container {
         flex-direction: column;
     }
 }
