--- a/stayle.css
+++ b/stayle.css
@@ -11,9 +11,17 @@
     cursor: pointer;
     border: 0;
 }
+
 .text_gary {
     color: #727272;
 }
+
+.section_title {
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
 * {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
@@ -47,12 +55,6 @@ nav li a {
     color: var(--dark-02, #424242);
 }
 
-.nav_title {
-    color: #131313;
-    font-size: 3rem;
-    font-weight: 700;
-}
-
 /* Banner stayle */
 .banner_content {
     max-width: 800px;
@@ -81,24 +83,60 @@ main {
     display: flex;
     align-items: center;
 }
-.teams_img_container{
+
+.teams_img_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams_content{
-  padding: 0 70px;
+
+.teams_content {
+    padding: 0 70px;
 }
-.teams_title{
+
+.teams_title {
     font-size: 3rem;
 }
-.teams_title .quick_list{
+
+.teams_title .quick_list {
     font-weight: 500;
 }
-.teams_title .text_feture{
+
+.teams_title .text_feture {
     color: #FF900E;
     font-weight: 700;
 }
+
+/* fact section */
+.facts_card_container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts_card_container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts_card_container .card_title{
+font-weight: 600;
+font-size: 1.25rem;
+margin-top: 5px;
+}
+.facts_card_container .card_stats {
+font-size: 3rem;
+color: #424242;
+margin-top: 10px;
+margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -112,19 +150,22 @@ main {
         padding: 5px;
     }
 
-    nav{
+    nav {
         flex-direction: column;
     }
-    .teams_container{
+
+    .teams_container {
         flex-direction: column-reverse;
     }
-    .teams_img_container{
+
+    .teams_img_container {
         margin-top: 30px;
         grid-template-columns: 1fr;
     }
-    .teams_content{
+
+    .teams_content {
         padding: 0 20px;
-      }
+    }
 
 }
 
@@ -134,7 +175,8 @@ main {
         padding: 30px;
     }
 
-    nav, .teams_container {
+    nav,
+    .teams_container {
         flex-direction: column;
     }
 }
