--- a/stayle.css
+++ b/stayle.css
@@ -11,7 +11,9 @@
     cursor: pointer;
     border: 0;
 }
-
+section{
+    margin-top: 90px;
+}
 .text_gary {
     color: #727272;
 }
@@ -108,30 +110,48 @@ main {
 }
 
 /* fact section */
-.facts_card_container{
+.facts_card_container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 90px;
 }
+
 .facts_card_container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
+
 }
-.facts_card_container .card_title{
-font-weight: 600;
-font-size: 1.25rem;
-margin-top: 5px;
+
+.facts_card_container .card_title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
 }
+
 .facts_card_container .card_stats {
-font-size: 3rem;
-color: #424242;
-margin-top: 10px;
-margin-bottom: 10px;
+    font-size: 3rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
+/* sponcers style*/
+.sponcers {
+    text-align: center;
+}
 
-
+.sponcers_img_container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.sponcers_img_container img{
+    width: 165px;
+}
 
 
 
@@ -150,12 +170,18 @@ margin-bottom: 10px;
         padding: 5px;
     }
 
-    nav {
+    nav, .sponcers_img_container {
         flex-direction: column;
+        
     }
 
-    .teams_container {
+    .teams_container,
+    .facts_card_container {
         flex-direction: column-reverse;
+    }
+
+    .facts_card_container {
+        gap: 20px;
     }
 
     .teams_img_container {
@@ -163,7 +189,7 @@ margin-bottom: 10px;
         grid-template-columns: 1fr;
     }
 
-    .teams_content {
+    .teams_content, .card{
         padding: 0 20px;
     }
 
