--- a/stayle.css
+++ b/stayle.css
@@ -117,7 +117,10 @@ main {
     margin-top: 130px;
     gap: 140px;
 }
-
+.feature_img img{
+height: 90%;
+margin-left: 90px;
+}
 .feature_content .card {
     padding: 30px;
     margin-bottom: 20px;
@@ -133,13 +136,19 @@ main {
 border-radius: 8px;
 background: #FF900E;
 color: #FFF;
-width: 342px;
+width: 300px;
 padding: 40px;
+text-align: center;
+position: relative;
+bottom: 100px;
 }
 .ten_years_batch h2{
     font-size: 4rem;
+    margin: 0;
 }
-
+.ten_years_batch p{
+    font-size: 1.5rem;
+}
 /* fact section */
 .facts_card_container {
     display: flex;
@@ -219,13 +228,21 @@ padding: 40px;
     }
 
     nav,
-    .sponcers_img_container {
+    .sponcers_img_container, .features {
         flex-direction: column;
 
     }
-
+.feature_img img{
+    width: 90%;
+    margin-left: 0;
+}
+.ten_years_batch{
+    position: static;
+    max-width: 300px;
+}
     .teams_container,
-    .facts_card_container {
+    .facts_card_container
+     {
         flex-direction: column-reverse;
     }
 
@@ -254,7 +271,7 @@ padding: 40px;
     nav,
     .teams_container,
     .facts_card_container,
-    .sponcers_img_container {
+    .sponcers_img_container, .features  {
         flex-direction: column;
     }
 }
