--- a/stayle.css
+++ b/stayle.css
@@ -34,7 +34,7 @@ section {
 /* header style */
 header {
     background: rgba(255, 144, 14, 0.10);
-    padding: 50px 240px;
+    padding: 50px 200px;
 }
 
 nav {
@@ -67,9 +67,9 @@ nav li a {
 }
 
 .banner_title {
-    font-size: 5rem;
+    font-size: 4.8rem;
     color: #131313;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 .banner img {
@@ -117,10 +117,12 @@ main {
     margin-top: 130px;
     gap: 140px;
 }
-.feature_img img{
-height: 90%;
-margin-left: 90px;
+
+.feature_img img {
+    height: 80%;
+    margin-left: 80px;
 }
+
 .feature_content .card {
     padding: 30px;
     margin-bottom: 20px;
@@ -128,27 +130,32 @@ margin-left: 90px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(20, 18, 18, 0.06);
 }
-.features .section_title{
+
+.features .section_title {
     border-left: 5px solid #FF900E;
     padding-left: 20px;
 }
-.ten_years_batch{
-border-radius: 8px;
-background: #FF900E;
-color: #FFF;
-width: 300px;
-padding: 40px;
-text-align: center;
-position: relative;
-bottom: 100px;
+
+.ten_years_batch {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 300px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
-.ten_years_batch h2{
+
+.ten_years_batch h2 {
     font-size: 4rem;
     margin: 0;
 }
-.ten_years_batch p{
+
+.ten_years_batch p {
     font-size: 1.5rem;
 }
+
 /* fact section */
 .facts_card_container {
     display: flex;
@@ -199,9 +206,12 @@ bottom: 100px;
 .footer_section {
     border-radius: 8px;
     background: #FFF4E7;
-    width: 1100px;
-    height: 100px;
-    margin-left: 10%;
+    width: 900px;
+    height: 80px;
+    margin-left: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text {
@@ -209,6 +219,7 @@ bottom: 100px;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
+
 }
 
 
@@ -228,21 +239,24 @@ bottom: 100px;
     }
 
     nav,
-    .sponcers_img_container, .features {
+    .sponcers_img_container,
+    .features {
         flex-direction: column;
 
     }
-.feature_img img{
-    width: 90%;
-    margin-left: 0;
-}
-.ten_years_batch{
-    position: static;
-    max-width: 300px;
-}
+
+    .feature_img img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten_years_batch {
+        position: static;
+        max-width: 300px;
+    }
+
     .teams_container,
-    .facts_card_container
-     {
+    .facts_card_container {
         flex-direction: column-reverse;
     }
 
@@ -260,18 +274,25 @@ bottom: 100px;
         padding: 0 20px;
     }
 
-}
-
-/* Tablet or medium device */
-@media screen and (min-width: 577px) and (max-width: 992px) {
-    header {
-        padding: 30px;
-    }
-
-    nav,
-    .teams_container,
-    .facts_card_container,
-    .sponcers_img_container, .features  {
+    .footer_section {
         flex-direction: column;
+        margin-left: 0%;
+        width: 370px;
+        gap: 0;
     }
-}
+
+
+    /* Tablet or medium device */
+    @media screen and (min-width: 577px) and (max-width: 992px) {
+        header {
+            padding: 30px;
+        }
+
+        nav,
+        .teams_container,
+        .facts_card_container,
+        .sponcers_img_container,
+        .features {
+            flex-direction: column;
+        }
+    }
